# M3W2-Bot

./: gamename.py  main.py  prefixes.json  pyproject.toml
cogs/: cog1.py
