[tool.poetry]
name = "repl_python3_M3W2-Bot"
version = "0.1.0"
description = ""
authors = ["Karthikeyan2001 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.1.0"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
